--- a/Resources/Public/Stylesheets/Common.css
+++ b/Resources/Public/Stylesheets/Common.css
@@ -126,8 +126,7 @@ td.latest-items-options {
     text-align: right;
 }
 
-.badge.thread-last-update,
-.label.thread-last-update {
+.thread-last-update {
 	width: 90px;
 	text-align: right;
 	display: inline-block;
