--- a/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
@@ -9,7 +9,7 @@
 </f:if>
 
 <f:section name="paginator">
-	<div class="pagination">
+	<div class="pagination pagination-small">
 		<ul class="paginator">
 			<li>
 				<f:if condition="{pagination.previousPage} > 1">
